# chemPackage

./: .gitignore  MANIFEST.in  Makefile  README.md  __init__.py  charges.py  coords.py  cubefile.py  emptyfile.py  errorclass.py  errorclassinfo.py  excite_mo.py  general.py  povedit.py  pyproject.toml  raman_IR.py  requirements.txt  setup.py
.github/workflows/: python-package.yml
adf/: adf.py  coordinates.py  density.py  dim.py  input_block.py  vibrations.py
chemPackage/: __init__.py  chemdata.py  coords.py  input.py  pol.py  raman_IR.py
chemPackage/adf/: basis.py  excitations.py  read_file.py
chemPackage/ams/: ams.py  (+5 more)
dim/: dimproperties.py  read_file.py
dressedT/: dressed_SES.py  dressed_hyperpol.py  geometry.py  progress_bar.py  smoothing.py  translate_tensors.py
f2py/: find_equal.f90  translate.f90
mfunc/: .f2py_f2cmap  Makefile  __init__.py  mvmult.f90
mfuncContainer/: MANIFEST.in  setup.py
nwchem/: __init__.py  coordinates.py  dim.py  excitations.py  input_block.py  nwchem.py  orbitals.py  polarizability.py  vibrations.py
prep/: .hgignore  compile.py  natsort.py
prepContainer/: setup.py
tdspec/: input_block.py  read_file.py  tdspec.py  tdspecproperties.py
test_suite/: README
unitTests/: DIM_spe.out  adfOrbital_test.py  adfPol_test.py  adfProp_test.py  adfVib_test.py  adf_test.py  h2o_freq.out  h2o_geom.out  h2o_pol.out  nh3Exc.out  nh3Freq.out  nh3Geom.out  nh3Pol.out  nh3Pol2.out  nwchemCoords_test.py  nwchemExc_test.py  nwchemPol_test.py  nwchemTech_test.py  nwchemVib_test.py  nwchem_test.py  raman-benzene.out  sampleCoords.xyz  test.py
(+101 files in other folders)
